# kryten-userstats

./: .coverage  CHANGELOG.md  INITIAL_STATE_LOADING.md  INSTALL.md  PUBLISHING.md  QUERY_ENDPOINTS.md  aliases.json  config.example.json  manage_aliases.py  pyproject.toml  query_cli.py  start-kryten-userstats.ps1  start-kryten-userstats.sh  start-userstats.ps1  start-userstats.sh
.github/workflows/: ci.yml  publish-python.yml  python-publish.yml
examples/: metrics_example.py  query_example.py
systemd/: kryten-userstats.service
tests/: test_activity_tracker.py  test_database.py
userstats/: __init__.py  __main__.py  activity_tracker.py  database.py  database_additions.py  emote_detector.py  kudos_detector.py  main.py  metrics_server.py  nats_publisher.py
