[project]
name = "kryten-userstats"
version = "0.5.8"
description = "User statistics tracking microservice for CyTube channels"
readme = "README.md"
requires-python = ">=3.10,<4.0.0"
keywords = [ "cytube", "statistics", "tracking", "microservice", "nats", "prometheus",]
classifiers = [ "Development Status :: 4 - Beta", "Intended Audience :: Developers", "License :: OSI Approved :: MIT License", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12", "Topic :: Communications :: Chat", "Topic :: Software Development :: Libraries :: Python Modules",]
dependencies = [ "kryten-py>=0.9.10", "aiohttp>=3.9.0,<4.0.0",]
[[project.authors]]
name = "Your Name"
email = "your.email@example.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[dependency-groups]
dev = [ "pytest>=7.4.0,<8.0.0", "pytest-asyncio>=0.21.0,<0.22.0", "pytest-cov>=4.1.0,<5.0.0", "black>=23.7.0,<24.0.0", "ruff>=0.0.285,<0.0.286", "mypy>=1.5.0,<2.0.0",]

[project.license]
text = "MIT"

[project.scripts]
kryten-userstats = "userstats.__main__:main"

[tool.black]
line-length = 120
target-version = [ "py311",]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [ "E", "F", "I", "N", "W", "UP",]
ignore = [ "UP017",]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = "userstats.main"
disable_error_code = [ "union-attr",]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [ "tests",]

[tool.hatch.build.targets.wheel]
packages = [ "userstats",]
